edit: synchronized the '!spam' command with the last command changes